# FinetuneLLM-Assignement1C

./: Atempts.py  Evaluation.py  Evaluation_Results.xlsx  MistralTrain.py  Outputtest  Phi2Train.py  README.md  pyproject.toml
